syntax = "proto3";

package user;
option go_package = "shared/proto/v1/user;user";

// UserService provides operations for managing user accounts.
service UserService {
    //CreateUser creates new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    //login user
  rpc Login(LoginRequest) returns (LoginResponse);
    //get user by id
  rpc GetUserByID(GetUserByIDRequest) returns (User);
    //search users
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
    //update user
  rpc UpdateUser(UpdateUserRequest) returns (User);
    //delete user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

   // CreateAddress creates a new address for a user.
  rpc CreateAddress(CreateAddressRequest) returns (CreateAddressResponse);
  // GetAddressByID retrieves an address by its ID.
  rpc GetAddressByID(GetAddressByIDRequest) returns(GetAddressByIDResponse);
  // ListAddressesByUserID retrieves all addresses for a specific user.
  rpc ListAddressesByUserID(ListAddressesByUserIDRequest)returns (ListAddressesByUserIDResponse);
  // UpdateAddress updates an existing address.
  rpc UpdateAddress(UpdateAddressRequest)returns (UpdateAddressResponse);
  // DeleteAddress deletes an address by its ID.
  rpc DeleteAddress(DeleteAddressRequest) returns(DeleteAddressResponse);

}

message CreateUserRequest{
  string name     = 1;
  string email    = 2;
  string password = 3;
  string role     = 4;
}

message CreateUserResponse {
  User user = 1;
}

message LoginRequest {
  string email    = 1;
  string password = 2;
}

message LoginResponse {
  User   user  = 1;
  string token = 2;
}

message GetUserByIDRequest {
  int32 id = 1;
}

message SearchUsersRequest {
  string query       = 1;
  int32  page_number = 2;
  int32  page_size   = 3;
}

message UpdateUserRequest {
  int32  id       = 1;
  string name     = 2;
  string email    = 3;
  string password = 4;
  string role     = 5;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message SearchUsersResponse {
  repeated User users = 1;
  int32         total = 2;
}

message User{
  int32  id    = 1;
  string name  = 2;
  string email = 3;
  string role  = 4;
}

message CreateAddressRequest {

  int32  user_id  = 2;
  string country  = 3;
  string city     = 4;
  string state    = 5;
  string street   = 6;
  string zip_code = 7;
}

message CreateAddressResponse {
  Address address = 1;
}

message GetAddressByIDRequest {
  int32 id = 1;
}

message GetAddressByIDResponse {
  Address address = 1;
}

message ListAddressesByUserIDRequest {
  int32 user_id = 1;
}

message ListAddressesByUserIDResponse {
  repeated Address addresses = 1;
}

message UpdateAddressRequest {
  string country  = 1;
  string city     = 2;
  string state    = 3;
  string street   = 4;
  string zip_code = 5;
}

message UpdateAddressResponse {
  Address address = 1;
}

message DeleteAddressRequest {
  int32 id = 1;
}

message DeleteAddressResponse {
  bool success = 1;
}

message Address{
  int32  id       = 1;
  int32  user_id  = 2;
  string country  = 3;
  string city     = 4;
  string state    = 5;
  string street   = 6;
  string zip_code = 7;
}